# rubikscube

./: CMakeLists.txt  README.md  main.cpp  test_rubik.cpp
src/: CMakeLists.txt  cube_compare.cpp  cube_compare.h  i_colored_cube.h  i_cube_draw.h  i_cube_validator.h  i_turnable.h  instruction_parser.cpp  instruction_parser.h  rubiks_cube.cpp  rubiks_cube.h
src/drawers/: ascii_cube.cpp  ascii_cube.h  colored_cube.cpp  colored_cube.h  number_cube.cpp  number_cube.h
src/validators/: tile_color_validator.cpp  tile_color_validator.h  tile_neighbour_validator.cpp  tile_neighbour_validator.h  tile_uniqueness_validator.cpp  tile_uniqueness_validator.h
test/: test_back_turn.cpp  test_down_turn.cpp  test_front_turn.cpp  test_instruction_parser.cpp  test_left_turn.cpp  test_right_turn.cpp  test_up_turn.cpp  test_xaxis_rotate.cpp  test_yaxis_rotate.cpp  test_zaxis_rotate.cpp  turn_test.cpp  turn_test_obsolete.cpp
